--- a/NuevoProyectoGIT/styles/style.css
+++ b/NuevoProyectoGIT/styles/style.css
@@ -1,31 +1,40 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: 0;
+  box-sizing: border-box;
+  font-family: "Inter", serif;
 }
 
 .main {
+  /* border: 4px solid blueviolet; */
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #123456;
   flex-direction: column;
+  padding: 20px; 
+  gap: 20px; 
 
   p {
-    color: #000;
+    color: #ffffff;
     font-size: 1rem;
     letter-spacing: 1.5px;
+    text-align: center;
   }
 
   button {
-    padding: 10px 10px;
+    padding: 10px;
     border: none;
     width: 40%;
+    background-color: blueviolet;
+    color: white;
+    cursor: pointer;
   }
 
   h1 {
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 70px;
+    text-align: center;
   }
 }
