--- a/NuevoProyectoGIT/styles/style.css
+++ b/NuevoProyectoGIT/styles/style.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #123456;
+  background-color: #000000;
   flex-direction: column;
   padding: 20px; 
   gap: 20px; 
@@ -26,10 +26,13 @@
   button {
     padding: 10px;
     border: none;
+    border-radius: 45px;
     width: 40%;
-    background-color: blueviolet;
+    background-color: #ff9900;
     color: white;
     cursor: pointer;
+    font-weight: bold;
+    
   }
 
   h1 {
