Texto rojo nuevo

--- a/NuevoProyectoGIT/styles/style.css
+++ b/NuevoProyectoGIT/styles/style.css
@@ -40,4 +40,10 @@
     font-size: 70px;
     text-align: center;
   }
+
+  h2 {
+    color: red;
+    font-size: 20px;
+    text-align: center;
+  }
 }
